--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <link rel="stylesheet" href="assets/css/main.css">
  <link rel="stylesheet" href="assets/css/celulares.css">
  <link rel="stylesheet" href="assets/css/tablets.css">
+ <link rel="stylesheet" href="assets/css/tablet2.css">
 
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css" />
 <style>
