--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Ong - Fofuxos </title>
- <link rel="stylesheet" href="assets/css/main.css">
- <link rel="stylesheet" href="assets/css/celulares.css">
- <link rel="stylesheet" href="assets/css/tablets.css">
- <link rel="stylesheet" href="assets/css/tablet2.css">
+ <link rel="stylesheet" href="assets/sass/main/main.css">
+
 
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css" />
 <style>
