Modificaçoes no logotipo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <nav class="heromenuprincipal_menu">
 
       <figure class="heromenuprincipal-imgLogo">
-         <img src="assets/imgs/logotipo/logo-menu.png" alt="">
+         <img src="assets/imgs/logotipo/logo-menu.png" alt="" class="imgLogo-img">
          
       </figure>
       <ul class="heromenuprincipal-menuToggle">
