--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
 
 <div class="desenvolvedor">
-   <h2> Desenvolvido por <span class="autor"><a href="https://github.com/dinhoSilwa?tab=repositories">Dinho Silva</a></span> para um teste técnico do grupo Simios</h2>
+   <h2> Desenvolvido por <span class="autor" style="font-size:20px;"><a href="https://github.com/dinhoSilwa?tab=repositories">Dinho Silva</a></span> para um teste técnico do grupo Simios</h2>
    
 </div>
 
